--- a/views/client/layout/default.pug
+++ b/views/client/layout/default.pug
@@ -18,6 +18,7 @@ html
 
     // socket io
     script(src="/socket.io/socket.io.js")
+    script(src="/js/socket.js")
 
     script(src="/js/chat.js")
 
