--- a/views/client/pages/chat/index.pug
+++ b/views/client/pages/chat/index.pug
@@ -10,24 +10,30 @@ block main
             .col-12
                 .chat
                     .inner-body
-                        .inner-incoming
-                            .inner-name Em yêu
-                            .inner-content
-                                | A ơi sang nhà e nha, nhà e không có ai ở nhà cả
-                        .inner-outgoing
-                            .inner-content
-                                | Thế à? Ok e iu
-                        .inner-incoming
-                            .inner-name Em yêu
-                            .inner-content
-                                | Nhanh nha nhanh nha
-                        .inner-outgoing
-                            .inner-content
-                                | Ck đến nhà rồi mà thấy ai ở nhà đâu e? Khoá cửa mà :(
-                        .inner-incoming
-                            .inner-name Em yêu
-                            .inner-content
-                                | Thì bảo nhà e không ai ở nhà mà :))
+                        each chat in chats
+                            div(class=(chat.inforUser.id === user.id ? "inner-outgoing" : "inner-incoming"))
+                                if(chat.inforUser.id !== user.id)
+                                    .inner-name #{chat.inforUser.fullName}
+                                .inner-content
+                                    | #{chat.content}
+                        //.inner-incoming
+                        //    .inner-name Em yêu
+                        //    .inner-content
+                        //        | A ơi sang nhà e nha, nhà e không có ai ở nhà cả
+                        //.inner-outgoing
+                        //    .inner-content
+                        //        | Thế à? Ok e iu
+                        //.inner-incoming
+                        //    .inner-name Em yêu
+                        //    .inner-content
+                        //        | Nhanh nha nhanh nha
+                        //.inner-outgoing
+                        //    .inner-content
+                        //        | Ck đến nhà rồi mà thấy ai ở nhà đâu e? Khoá cửa mà :(
+                        //.inner-incoming
+                        //    .inner-name Em yêu
+                        //    .inner-content
+                        //        | Thì bảo nhà e không ai ở nhà mà :))
                     .inner-foot
                         form(
                             class="inner-form"
