--- a/views/client/layout/default.pug
+++ b/views/client/layout/default.pug
@@ -20,6 +20,9 @@ html
     script(src="/socket.io/socket.io.js")
     script(src="/js/socket.js")
 
-    script(src="/js/chat.js")
+    // emoji
+    script(type="module" src="https://cdn.jsdelivr.net/npm/emoji-picker-element@^1/index.js")
+
+    script(type="module" src="/js/chat.js")
 
     script(src="/js/script.js")
