--- a/views/client/pages/chat/index.pug
+++ b/views/client/pages/chat/index.pug
@@ -16,6 +16,8 @@ block main
                                     .inner-name #{chat.inforUser.fullName}
                                 .inner-content
                                     | #{chat.content}
+                        .inner-list-typing
+
                     .inner-foot
                         form(
                             class="inner-form"
@@ -26,5 +28,9 @@ block main
                                 placeholder="Nhập nội dung ..."
                                 name="content"
                             )
+                            span(class="button-icon btn btn-light mx-2")
+                                i.fa-regular.fa-face-smile
                             button
                                 i.fa-solid.fa-paper-plane
+    div(class="tooltip" role="tooltip")
+        emoji-picker
