--- a/views/client/layout/default.pug
+++ b/views/client/layout/default.pug
@@ -4,7 +4,10 @@ html
         title #{pageTitle}
         link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css")
         link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css")
+        // upload img
         link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/file-upload-with-preview/dist/style.css")
+        // preview img
+        link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.11.7/viewer.css")
         link(rel="stylesheet", href="/css/style.css")
     body
         include ../partials/header
@@ -26,6 +29,9 @@ html
 
     // file-upload-with-preview
     script(src="https://cdn.jsdelivr.net/npm/file-upload-with-preview/dist/index.iife.js")
+
+    // preview img
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.11.7/viewer.js")
 
     script(type="module" src="/js/chat.js")
 
